# eqx-learn

./: README.md  __init__.py  pyproject.toml
eqxlearn/: __init__.py  base.py  compose.py  fitting.py  io.py  metrics.py  model_selection.py  pipeline.py  plotting.py
eqxlearn/containers/: __init__.py  sequential.py
eqxlearn/decomposition/: __init__.py  pca.py
eqxlearn/gaussian_process/: __init__.py  kernels.py  regressor.py  train.py
eqxlearn/linear_model/: __init__.py  linear_regression.py  regressor.py
eqxlearn/model_selection/: __init__.py  split.py  validate.py
eqxlearn/multioutput/: __init__.py  regressor.py
eqxlearn/pipeline/: __init__.py  pipeline.py
eqxlearn/preprocessing/: __init__.py  complex.py  function.py  scalers.py
eqxlearn/train/: __init__.py  loops.py  losses.py
